# image-watcher

./: .gitignore  Cargo.toml  README.md
src/: config.rs  event_handler.rs  main.rs  s3.rs
src/config/: config.rs  mod.rs  path_match.rs  watch_directory.rs
src/s3/: client.rs  mod.rs  util.rs
