[package]
name = "image-watcher"
version = "0.1.0"
edition = "2021"

[dependencies]
notify = "8.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aws-config = { version = "1.6.0", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.79.0"
aws-types = "1.3.6"
aws-credential-types = "1.2.2"
tokio = { version = "1.0", features = ["full"] }
image = "0.24"
walkdir = "2.4"
uuid = { version = "1.16.0", features = ["v7","serde"] }
chrono = "0.4.40"
chrono-tz = "0.10.1"